<resources>
    <string name="app_name">Cluboard</string>
    <string name="APPLICATION_ID">VYpP0R73xQjEWBuozA9M51I9wCkeFOBldy7rdAsX</string>
    <string name="CLIENT_KEY">BSWKCSr3dq4zuZZCKVrNTruGSOwsO3Phz7Kbqhr7</string>
    <string name="facebook_app_id">1678390239087400</string>
    <string name="welcome_text">Welcome</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="login">Log in</string>
    <string name="fb_login">Login Via Facebook</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="logoutBtn">Log out</string>
    <string name="addClubBtn">+ New Club</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_club_detail">Club Detail</string>
    <string name="club_name_demo">Loading Club Name</string>
    <string name="club_desc_demo">Club Description Demo</string>
    <string name="logged_in_as">"You are logged in as "</string>
    <string name="logo_desc_demo">logo_desc_demo</string>
    <string name="club_detail_demo">Loading Club Detail</string>

    <string name="club_name">Club Name</string>
    <string name="club_desc">Club Description</string>
    <string name="club_detail">Club Detail</string>
    <string name="title_activity_new_club">New Club</string>
    <string name="title_activity_home">Home</string>
    <string name="action_about">About</string>
    <string name="new_club_create_button">CREATE</string>
    <string name="action_create_club">CREATE CLUB</string>
    <string name="title_activity_setting">Setting</string>
    <string name="new_event_btn">+ New Event</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="new_event_location">Location</string>
    <string name="new_event_name">Name</string>
    <string name="new_event_desc">Description</string>
    <string name="new_event_creat_btn">Create Event</string>
    <string name="title_activity_my_bookmark">My Bookmark</string>
    <string name="title_activity_my_events">Followed Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_date_label_set">Event Date</string>
    <string name="event_from_time_label_set">From</string>
    <string name="event_to_time_label_set">To</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommendations">Recommendations</string>
    <string name="upcoming_events">Upcoming Events</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="new_club_name">Club name</string>
    <string name="new_club_desc">Description (e.g. full name)</string>
    <string name="new_club_detail">Detail</string>


    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>email</item>
    </string-array>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="new_club_email">Email</string>
    <string name="new_club_phone">Phone</string>

    <string name="title_first_section">General</string>
    <string name="title_second_section">Notifications</string>
    <string name="title_third_section">Account</string>
    <string name="title_checkbox_preference">Allow notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_summary_change_password">Click here to change your password using your old password</string>
    <string name="pref_title_change_password">Change password</string>
    <string name="dialog_message_change_password"></string>
    <string name="dialog_title_change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="title_activity_manage_clubs">Welcome</string>
    <string name="my_clubs">My Clubs</string>
    <string name="warning_complete_club_info">Please complete the club name and description</string>
</resources>
