...
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:fontFamily="sans-serif-light"
            android:singleLine="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/event_list_item_time_date"
            android:layout_toStartOf="@+id/event_list_item_follow"
            android:text="@string/club_name_demo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/club_name_size" />

        <TextView
            android:id="@+id/event_list_item_location"
...
